@@ -16,51 +16,125 @@
 /* <dtml-with base_properties> (do not remove this :) */
 /* <dtml-call "REQUEST.set('portal_url', portal_url())"> (not this either :) */
 
-/* arrow search input */ 
-#portal-searchbox input.searchButton { 
-    background: url(&dtml-portal_url;/search_btn.png) no-repeat top left; 
-    border: none; 
-    width: 41px; 
-    height: 26px; 
-    margin: 0 8px 0 2px; 
+/* arrow search input */
+#portal-searchbox input.searchButton {
+    background: url(&dtml-portal_url;/search_btn.png) no-repeat top left;
+    border: none;
+    width: 41px;
+    height: 26px;
+    margin: 0 8px 0 2px;
     padding: 0;
-    cursor: pointer; 
-} 
+    cursor: pointer;
+}
 
 /* Override jquery.ui style */
 .ui-widget-content a {
     color: #2A6495 !important;
 }
 
-/* Tooltips */
+/* Inflexible tooltips */
+
 .eea-tooltip-markup-top,
 .eea-tooltip-markup-bottom,
 .eea-tooltip-markup-left,
 .eea-tooltip-markup-right {
-    display: none; 
-    font-size: 12px; 
-    height: 70px; 
-    width: 160px; 
-    padding: 25px; 
+    display: none;
+    font-size: 12px;
+    height: 70px;
+    width: 160px;
+    padding: 25px;
     color: white;
     text-align: left;
     text-decoration: none;
 }
 .eea-tooltip-markup-top {
-    background: transparent url(&dtml-portal_url;/++resource++tools/green_arrow_top.png); 
+    background: transparent url(&dtml-portal_url;/++resource++tools/green_arrow_top.png);
 }
 .eea-tooltip-markup-bottom {
-    background: transparent url(&dtml-portal_url;/++resource++tools/green_arrow_bottom.png); 
+    background: transparent url(&dtml-portal_url;/++resource++tools/green_arrow_bottom.png);
     margin-top: 15px;
 }
-.eea-tooltip-markup-left { 
-    background: transparent url(&dtml-portal_url;/++resource++tools/green_arrow_left.png); 
+.eea-tooltip-markup-left {
+    background: transparent url(&dtml-portal_url;/++resource++tools/green_arrow_left.png);
     padding-right: 45px;
 }
-.eea-tooltip-markup-right { 
-    background: transparent url(&dtml-portal_url;/++resource++tools/green_arrow_right.png); 
+.eea-tooltip-markup-right {
+    background: transparent url(&dtml-portal_url;/++resource++tools/green_arrow_right.png);
     padding-left: 45px;
 }
+
+/* Flexible tooltips */
+
+.eea-tooltip-markup {
+  display: none;
+}
+
+.eea-tooltip-markup .tooltip-box-br {
+  background: transparent url(&dtml-portal_url;/++resource++tools/x-green-bottom-right.png) no-repeat right bottom;
+  position:relative;
+  max-height:1000px;
+  min-height:50px;
+  min-width:100px;
+  width:250px;
+  padding-bottom:3px;
+}
+
+.eea-tooltip-markup .tooltip-box-tl {
+  background: transparent url(&dtml-portal_url;/++resource++tools/x-green-top-left.png) no-repeat left top;
+  position:relative;
+  left:-30px;
+  top:-20px;
+  margin-right:-19px;
+  max-height:1000px;
+  min-height:50px;
+  min-width:100px;
+  width: 269px;
+}
+
+.eea-tooltip-markup .tooltip-box-rcontent {
+  background: transparent url(&dtml-portal_url;/++resource++tools/x-green-arrow-left.png) no-repeat left center;
+  position: relative;
+  top: 11px;
+  padding:2em 1em 2em 3em;
+  text-align:justify;
+  font-size: 12px;
+  color:#ffffff;
+}
+
+.eea-tooltip-markup .tooltip-box-lcontent {
+  background: transparent url(&dtml-portal_url;/++resource++tools/x-green-arrow-right.png) no-repeat right center;
+  position: relative;
+  top: 11px;
+  right: -31px;
+  padding:2em 3.5em 2em 1em;
+  text-align:justify;
+  font-size: 12px;
+  color:#ffffff;
+}
+
+.eea-tooltip-markup .tooltip-box-bcontent {
+  background: transparent url(&dtml-portal_url;/++resource++tools/x-green-arrow-top.png) no-repeat center top;
+  color:#FFFFFF;
+  font-size:12px;
+  left:10px;
+  padding:2.5em 1.5em 1em 2.5em;
+  position:relative;
+  text-align:justify;
+  top:-2px;
+}
+
+.eea-tooltip-markup .tooltip-box-tcontent {
+  background: transparent url(&dtml-portal_url;/++resource++tools/x-green-arrow-bottom.png) no-repeat center bottom;
+  bottom:-22px;
+  color:#FFFFFF;
+  font-size:12px;
+  left:10px;
+  padding:0.5em 1.5em 2.5em 2.5em;
+  position:relative;
+  text-align:justify;
+}
+
+/* */
 
 #print-warning {
     display: none;
@@ -460,9 +534,9 @@ float:right;
 #searchbox_terminology input {
    width: 366px;
    background: transparent url(search_bg.png) no-repeat 50% 50%;
-   border: none; 
+   border: none;
    padding: 9px 0 9px 30px;
-   font-size: 0.8em;   
+   font-size: 0.8em;
 }
 
 /*  IE7 fixes */
@@ -735,7 +809,7 @@ float:right;
 }
 
 .warningMessage {
-    font-size: 160%;    
+    font-size: 160%;
 }
 
 .portalMessage a {
@@ -851,7 +925,7 @@ float:right;
 }
 
 #relatedItems .visualClear {
-  padding-bottom: 1.5em;  
+  padding-bottom: 1.5em;
 }
 
 .eventDetails {
