@@ -4,6 +4,7 @@ Changelog
 1.0 - (Unreleased)
 ------------------
 
+ * Implemented flexible tooltips in order to be able to add variable length tooltips [voineali, #2986]
  * Prepend ecotip link in footer w/ portal_url so that it works w/ template_service [thuliper, #3038]
  * removed frontpage properties from profile, properties are now managed via zmi [demarant]
  * Update atct_album_view macro in order to be used with eea.dataservice fancybox [voineali, #2924]
